changes related to deploymentverification

--- a/src/app/app.component.less
+++ b/src/app/app.component.less
@@ -6,7 +6,7 @@
         .oesdashboard{
             background-position: 0 0;
         }
-        .appdashboard{
+        .application{
             background-position: 0 -36px;
         }
         .policymanagement{
@@ -27,7 +27,7 @@
         .TestV{
             background-position: -19px -103px;
         }
-        .DeployV{
+        .deploymentverification{
             background-position: -19px -141px;
         }
         .Monitoring{
@@ -35,7 +35,14 @@
         }
     }
 }
-   .disabled_menu{
+.disabled_menu{
     pointer-events: none;
     opacity: 0.5;
-   }
+}
+
+.Subactive{
+    a{
+        color: yellowgreen;
+    }
+}
+
