--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -8,14 +8,14 @@
       <!-- /.sidebar_header -->
       <div class="sidebar_nav">
         <ul class="list-unstyled m-0" *ngFor="let SideMenu of Sidebar;">
-          <li class="{{SideMenu.disabled === true? 'disabled_menu':''}}" routerLink="{{SideMenu.link}}" routerLinkActive="active"><a><i class="icon {{SideMenu.link}}"></i> <span>{{SideMenu.name }} 
+          <li class="{{SideMenu.disabled === true? 'disabled_menu':''}}" routerLink="{{SideMenu.link}}" [routerLinkActiveOptions]="{exact: false}" routerLinkActive="active"><a><i class="icon {{SideMenu.link}}"></i> <span>{{SideMenu.name }} 
             <ng-template [ngIf]="SideMenu.name === 'Applications' ?true:false">
               <span class="badge badge-primary">{{applicationCount}}</span>
             </ng-template>
             </span></a>
             <ng-template [ngIf]="SideMenu.subMenu.length === 0 ?false:true">
               <ul class="subnav list-unstyled m-0" *ngFor = "let submenu of SideMenu.subMenu">
-                <li class="{{submenu.disabled === true? 'disabled_menu':''}}" routerLink="{{submenu.link}}"><a><i class="icon {{submenu.link}}"></i> <span>{{submenu.name}}</span></a></li>
+                <li class="{{submenu.disabled === true? 'disabled_menu':''}}" routerLink="{{submenu.link}}" (click)="navigateMenu($event)" routerLinkActive="Subactive"><a><i class="icon {{subMenuclass(submenu.link)}}"></i> <span>{{submenu.name}}</span></a></li>
               </ul>
             </ng-template>
             <!-- /.subnav -->
